--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/bangers": "^5.2.5",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/utils": "^6.3.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "gh-pages": "^6.2.0",
     "jquery": "^3.7.1",
     "prop-types": "^15.8.1",
